<resources>
    <string name="app_name">大贵州</string>

    <string-array name="bottomMenu">
        <item name="menu_home">主页</item>
        <item name="menu_news">新闻</item>
        <item name="menu_guizhou">大贵州</item>
        <item name="menu_leisure">休闲</item>
        <item name="menu_chat">会话</item>
    </string-array>

    <string-array name="menu_normal">
        <item name="menu_camera">相册</item>
        <item name="menu_album">相机</item>
    </string-array>
    <string-array name="menu_gender">
        <item name="menu_gender_man">男</item>
        <item name="menu_gender_woman">女</item>
        <item name="menu_gender_none">保密</item>
    </string-array>
    <!--<string name="menu_home">主页</string>-->
    <!--<string name="menu_news">新闻</string>-->
    <!--<string name="menu_guizhou">贵州</string>-->
    <!--<string name="menu_leisure">休闲</string>-->
    <!--<string name="menu_chat">聊天</string>-->

    <string name="left_menu_agenda">日程安排</string>
    <string name="left_menu_anniversary">纪念日</string>
    <string name="left_menu_account">随手记帐</string>
    <string name="left_menu_footprint">我的足迹</string>
    <string name="left_menu_album">我的相册</string>
    <string name="left_menu_collection">我的收藏</string>
    <string name="left_menu_setting">系统设置</string>
    <string name="left_menu_about">关于我们</string>
    <string name="left_menu_feedback">意见反馈</string>


    <string name="icon_more">更多</string>
    <string name="icon_close">关闭</string>
    <string name="icon_temperature">18℃</string>


    <string name="home_menu_recuit">招聘</string>
    <string name="home_menu_rental">租房</string>
    <string name="home_menu_read">阅读</string>
    <string name="home_menu_jingxuan">精选</string>
    <string name="home_menu_mingyan">名句摘录</string>

    <string name="home_menu_more">更多</string>
    <string name="home_menu_blacknum">黑名单</string>
    <string name="home_menu_websit">推荐网站</string>
    <string name="home_menu_ittool">IT工具</string>


    <string name="guizhou_menu_university">贵州大学</string>
    <string name="guizhou_menu_scenic">贵州景点</string>
    <string name="guizhou_menu_speciality">贵州特产</string>
    <string name="guizhou_menu_shiwuzhapling">失物招领</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--icon font-->
    <string name="icon_test">&#xe60c; &#xe627;\r\n名称?</string>
    <string name="login_weibo">微博</string>
    <string name="login_qq">QQ</string>
    <string name="login_weixin">微信</string>
    <string name="btn_send">发送</string>
    <string name="welcome">欢迎注册大贵州</string>

    <!--icon font-->

    <!--测试 字符串 发布需删除-->
    <string name="test_str_scnic">详情页-待布局</string>

    <string name="personal_title">个人信息</string>
    <string name="call_title">联系电话</string>
    <string name="cacht_title">清楚缓存</string>
    <string name="check_update_title">检查更新</string>
    <string name="account_safe_title">账号安全</string>
    <string name="agreement_title">服务协议</string>
    <string name="about_title">关于我们</string>
    <!--电话号码 可能不会是这么存的-->
    <string name="call_us">0851-66666666</string>
    <string name="agreement_content">第一章   概述\n \n第一条 本协议是由北京南威水科技术有限公司（以下简称“水科”或“我们”）与服务者（以下或称“您”）就到水平台服务（或称“本服务”）的相关事项所订立的有效合约。本协议有助于您了解本服务内容，了解您使用本服务的权利义务，请您仔细阅读。如果您对本协议的条款有疑问，请通过客服渠道进行询问，我们将向您解释条款内容。\n \n第二条  您同意，我们可能对本协议进行变更或修改，若您在本协议内容公告变更生效后继续使用本服务的，表示您已充分阅读、理解并接受变更后的协议内容，也将遵循变更后的协议内容使用水平台服务。\n \n第二章  定义\n \n第三条  本协议中的名词，具有如下含义：\n水平台：指水平台产品提供的服务，用户可以在该平台上查询获取涉水相关信息、发布并提供服务，也可以在该平台上预约服务或发布需求任务。\n水平台服务者：指同意本协议条款，签约入驻水平台发布信息和服务的用户。\n服务：指水平台以及平台服务者在平台中发布并提供的服务内容。\n用户：指同意本协议条款，注册到水平台的用户，包括水平台服务者和在水平台上寻找信息或服务的用户。\n法律法规：指适用于相关人士或涉及的标的物的全国性法律、地方性法律、行政法规、部门规章、通知、法令和其他立法、执法或者司法裁决（包括但不限于任何最高人民法院解释）或中华人民共和国相关主管部门发布的规范性文件，无论是否具有法律或者行政法规的地位。\n \n第三章  权利和义务\n \n第一节 用户的权利和义务\n \n第四条  您可按照水平台的服务者入驻流程提交身份信息、资质证明等资料，向水平台申请成为服务者，经水平台审核通过后，您即成为水平台的服务者，可以在水平台发布服务，并为用户提供服务。\n \n第五条  您理解，水平台有权基于安全性等因素，制定相应的服务者入驻标准，并可能根据业务发展情况随时进行调整，您认可水平台对您能否成为服务者的判定结果，对此不持异议。\n \n第六条  只有符合下列条件之一的自然人或法人才能申请成为本平台用户，可以使用本平台的服务：\n1、年满十六周岁，并具有民事权利能力和民事行为能力的自然人。\n2、根据中国法律、法规、行政规章成立并合法存在的个人、机关、企事业单位、社团组织和其他组织；无法人资格的单位或组织，不能注册为本平台用户，其与本平台之间的协议自始无效，本平台一经发现，有权立即终止对该用户的服务，并追究其使用本平台服务的一切法律责任。\n \n第七条  服务者应遵守法律法规，对服务者从事任何涉嫌违反法律法规的行为，水平台有权按照本协议规则进行处理；本协议尚无规定的，水平台有权按照具体事件酌情处理；但水平台对服务者的处理不免除服务者应负的法律责任。\n \n第八条  服务者应按照水平台的发布流程、规则发布自己的服务类型及具体内容、服务费用等，服务者确保在水平台发布服务的真实性、准确性、完整性和有效性，并按照发布的服务内容向用户提供服务（包括但不限于订单内容、服务者另向用户作出的服务承诺）。服务者与用户之间因服务而产生的争议或纠纷，由服务者自行处理并承担相应责任，因服务者违反本条约定给用户或水平台造成损失的，服务者应负责赔偿。\n \n第九条 服务者承诺，在使用水平台服务以及向用户提供服务的过程中，发布内容信息应遵守法律法规及其他规范性文件的规定，也不得违背公序良俗或侵害第三方权益的信息。\n \n第十条  服务者应保证具备符合完成服务的相关资质和能力，并按照水平台的要求提交相应的身份证明、资质证明等，平台用户不得以虚假信息注册平台账号，包含姓名、地址、手机号等，且在上述资料发生变更后及时通知水平台。\n \n第十一条   服务应当尊重客户知情权、选择权，服务应当坚持诚信原则，不误导、欺诈、混淆客户，尊重客户的隐私，不骚扰客户，不制造垃圾信息。\n \n第十二条  服务标题、图片、属性、价格、服务描述等服务要素之间应当相互匹配对应。\n \n第十三条  服务者提供的图片必须清晰，必须突出主题，不得含有其他网站、商户、logo、联系方式（包含但不限于手机号、网站链接、微信号、二维码）、支付宝／银行账户信息等。\n \n第十四条   发布的服务信息内容不得违反广告法的要求，如使用“唯一”、“最优”等夸大宣传或过度承诺的用语，也不得进行虚假宣传。未经本平台书面允许，用户不得将本平台的任何资料以及在交易平台上所展示的任何信息作商业性使用（包含但不限于以复制、修改、翻译、水印等形式制作衍生作品、分发或公开展示）。\n \n第十五条  不得出现或含有外部链接或者其他可直接跳转到第三方网站的功能，不得出现第三方网站的标识。\n \n第十六条  服务者不得诱导或欺骗用户在水平台之外进行交易，不得以任何手段逃避水平台线上交易流程。\n \n第十七条  服务者不得实施任何侵害他人合法权益的行为，包括但不限于：未经权利人的书面授权，服务者不得在其服务标题、描述、图片或其他页面使用水平台关联公司商号、商标、服务标志、企业名称、其他标志、标识、用语或上述品牌的附属标志及图案的任何变体、缩写或错误拼写。\n \n第十八条  服务者不得通过虚假交易、虚假宣传、提供虚假数据等方式提高其服务或应用的订购销量。平台用户不得采取不正当手段或注册多个账户及使用关联账户谋取不正当利益。禁止提供虚假需求、互换点赞好评、欺骗获取点赞好评、刷交易次数、获取红包等平台奖励用于抵现和消费等行为，提高自身或他人信用度及恶意评价其他用户、降低其他用户信用度。\n \n第十九条  服务者应当诚实守信，不得以恶意评价、恶意投诉、诋毁、虚假订购等方式进行不正当竞争。\n \n第二十条  服务者发布的服务需要确保不存在安全隐患问题，且符合国家质检等部门的要求。\n \n第二十一条  服务者不得在服务详情页，明示或者暗示与水平台及其关联公司有任何隶属关系或授权关系，或服务得到前述公司的认可，不得以前述公司的名义从事任何活动。\n \n第二十二条  服务者在水平台提供服务期间，服务者需要向预约的用户提供及时有效的服务；服务者向用户收取服务费用的，应按照法律法规的规定自行缴纳相应的税费以及开具发票。\n \n第二十三条  服务者同意水平台有权将服务者的信息提供给预约服务的用户，用于用户与服务者之间联系、沟通，或者用户与服务者发生纠纷、争议时，用于用户寻求外部争议解决途径。同时，服务者对于从水平台获知的其他用户的信息（如有），应该承担严格的保密义务，且仅能用于水平台允许的用途。\n \n第二十四条  服务者应自行履行本协议相关权利义务，自行提供服务，不得擅自将本协议权利义务或发布的服务委托给第三方处理，否则应赔偿因此给用户或水平台造成的损失。\n \n第二十五条  服务者应当遵守水平台不时发布的平台规则、流程。\n \n第二十六条  服务者认可，水平台与服务者不存在劳务关系、雇佣关系，且水平台无需向服务者支付任何费用。\n \n第二节 水平台的权利义务\n \n第二十七条  水平台有权基于安全性等因素，制定相应的服务者准入标准，并可能根据业务发展情况随时进行调整，您认可水平台对您能否使用本服务的判定结果，对此不持异议。\n \n第二十八条  水平台提示您注意，在提供服务的过程中，请注意您的人身、财产安全。\n \n第二十九条  水平台应提供本协议约定的相关功能和服务及配套的客户服务，并负责系统日常维护。同时，您理解并同意，水平台仅提供信息发布服务，水平台上信息的真实性、准确性，由您自行保证。水平台不介入您和用户的纠纷或任何争议的处理，如果出现纠纷或争议，建议您与对方多沟通，友好协商，或通过外部纠纷调解机构等途径来解决问题，您也可以要求水平台进行协调，但水平台并不保证协调取得实际效果。\n \n 第三十条  为保障服务者认证信息的持续真实有效，维护客户权益，水平台有权通过定期或不定期复核的方式，验证认证信息的真实有效性。如有关行政机关、司法机关或其他有权机关根据法律法规规定要求水平台提供服务者的认证信息，水平台可以依法向该等机关提供。如在复核过程中发现服务者提供的认证信息不全、无效或虚假的，水平台将依据情形严重程度，采取临时性的监管措施。\n \n第三十一条  服务者应遵照水平台交易流程的各项要求进行交易，服务者应合理保障客户权益。\n \n第三十二条  服务者或其发布的服务违规，水平台将依据违规程度给予不同类型的处理，相应处理办法的可能根据业务发展情况临时制定或随时进行调整，您对此不持异议。\n \n第三十三条  因违规被处理的服务者及服务，若申诉成立或处罚期限到期后，方可恢复正常状态。\n \n第四章  违规行为\n \n第三十四条  服务者出现任意一种违反本协议规则的行为（“违规行为”），或为违规行为提供便利（包括但不限于为客户行为提供便利），水平台有权进行独立判断并针对服务者或服务者发布的服务采取违规处理措施。\n \n第三十五条  服务者不得出现任何违法法律的行为，包括但不限于：\n1、反对宪法所确定的基本原则，煽动、抗拒、破坏宪法和法律、行政法规实施的。\n \n2、煽动颠覆国家政权，推翻社会主义制度，煽动、分裂国家，破坏国家统一的。\n \n3、损害国家信誉、荣誉和利益的。\n \n4、煽动民族仇恨、民族歧视，破坏民族团结的。\n \n5、任何包含对种族、性别、宗教、地域内容等歧视的。\n \n6、捏造或者歪曲事实，散布谣言，扰乱社会秩序的。\n \n7、宣扬封建迷信、邪教、淫秽、色情、赌博、暴力、凶杀、恐怖、教唆犯罪的。\n \n8、公然侮辱他人或者捏造事实诽谤他人合法权益的，或者进行其他恶意攻击的行为。\n \n9、含有法律、行政法规禁止的其他内容的。\n \n第五章  服务的中断和终止\n \n第三十六条  因网上信息平台的特殊性，本平台不承担对所有用户的交易行为以及与交易有关的其他事项进行事先审查的责任。但如发生以下情形，本平台有权无需征得用户的同意即可限制用户的活动、向用户核实有关资料，同时发出警告通知、暂时中止、无限期中止及冻结账户、注销账户或者拒绝向该用户提供服务，如用户行为给平台造成相关损失或关联损失的，还须承担相应法律责任及赔偿责任：\n \n1、 由平台用户或登录第三方平台举报，并提供相关证据，认定某用户或具体交易事项存在违反本协议规定或违法现象时，且本平台无法联系该用户或核证、验证该用户平台内相关资料的。\n \n2、 每个用户仅可在“水平台”注册一个账户。\n \n3、 用户在被本平台终止提供服务后，再一次直接或间接或以他人名义注册为本平台用户的。\n \n4、 无限期终止或冻结账户停止服务的用户，通过他人直接、间接再次注册成为水平台用户的。\n \n5、 任何刷单或疑似刷单行为，经警告拒不改正的。\n \n6、 用户提供虚假信息注册或有上述禁止的言论或行为的。\n \n7、 其他违反平台相关规定（包括但不限于本协议条款、本平台公示的各项制度或者文件）或致使平台或他人遭受利益损害的行为。\n \n8、 本协议终止或更新时，用户明确不同意接受新协议的。\n \n第三十七条  用户账户被封停或注销后，用户将不能使用本平台除浏览页面外的所有服务，但平台仍有权保留用户的所有注册信息及过往交易记录，对用户在平台内从事违法行为或违反本协议及相关规定的行为，本平台仍有权行使本协议规定的权利并追究用户的法律责任。\n \n第三十八条   若用户申请终止本平台服务，需经本平台审核同意，方可解除与本平台的协议关系，但本平台仍保留下列权利：\n \n1、 本平台有权在法律、法规、行政规章规定的时间内保留该用户的资料，包含但不限于以前的用户资料、交易记录等。\n \n2、 若终止服务之前，该用户在本平台交易上存在违法行为或违反本协议的行为，本平台仍可行使本协议所规定的权利等。\n \n第六章  知识产权\n \n第三十九条  用户在本平台发表的商品服务，评价，意见反馈、语音、文字信息或图片等所有信息（以下简称“信息”），除署名权、发表权、修改权外的其他知识产权权利（包含但不限于：复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权以及应当由著作权人享有的其他可转让权利），均独家排他无偿许可给平台，并同意平台以自己名义就所述权利的保护采取任何形式的法律行为，并获得全部赔偿。本协议已经构成《著作权法》第二十五条所规定的书面协议，其效力及于用户在本平台发布的任何受著作权法保护的作品内容，无论该内容形成于本协议签订前还是本协议签订后。\n \n第四十条  平台许可的关联方有权将用户在平台发表的商品服务，评价，意见反馈、语音、文字信息或图片进行使用或者与其他人合作使用，使用范围包含但不限于网站、电子杂志、杂志、刊物等。\n \n第四十一条  用户不得经由非本平台所提供的界面使用本平台的各项服务。\n \n第七章  通知和公告\n \n第四十二条   平台向用户发送的所有的通知和公告，将通过页面公告或应用推送或手机短信、其他营销等方式传送。平台的活动信息也将定期通过页面公告及应用推送或手机短信、其他营销方式向用户发送。\n \n第八章   不可抗力\n \n第四十三条   因不可抗力或者其他意外事件，使得本协议的履行不可能、不必要或者无意义的，双方均不承担责任。本合同所称之不可抗力意指不能预见、不能避免并不能克服的客观情况，包含但不限于互联网络连接故障，电脑、通讯或其他系统的故障，电力故障，罢工，暴乱，骚乱，灾难性天气（如火灾、洪水、风暴等），爆炸，战争，政府行为或任何其它自然或人为造成的灾难等客观情况。\n \n第九章   免责声明\n \n第四十四条  如出现下列情况本平台无需承担任何责任：\n \n1、由用户自行将账号、密码告知他人或与他人共享注册账户，由此导致的信息泄露或其他非平台原因导致的信息泄漏。\n \n2、 由于黑客攻击、计算机病毒侵入或发生因政府管制而造成的暂时性关闭等，从而影响网络正常运行而非平台原因而造成的个人信息泄露、丢失、被盗用或被篡改等。\n \n3、 任何第三方根据平台相关服务的声明及服务协议中所列明的情况使用您的个人信息，由此所产生纠纷的。\n \n4、用户双方在交易过程中不得使用非平台第三方聊天软件，并不得互留其他通信号码，如违规沟通产生纠纷的。\n \n5、服务者与用户取得联系沟通后的，通过其他支付平台进行交易或其他支付方式进行汇款、转账等支付行为（包含不限于用户引导服务者线下交易服务者同意的；服务者从平台获取用户信息，及任何其他形式的进行线下交易），用户因线下交易造成的一切经济损失由用户自行承担、负责。\n \n6、 本平台在各服务声明及服务协议中列明的所有免责情形的。\n \n7、本平台的网页或客户端上有与其它网站网页的链接，本平台对其他任何网站的内容、隐私政策、运营情况、或经营这些网站的公司的行为概不负责。用户在与第三方平台链接的网站提供个人信息之前，请查阅该平台的相关规则政策，由此与本网站链接的其它网站所造成的个人信息泄露及由此而导致的争议和纠纷与本平台无关。\n \n第四十五条   因不可抗力所导致信息泄露、丢失的。\n \n第十章   平台保密安全\n \n第四十六条  当用户接受该协议时，用户应当明确了解并同意：\n \n1、 信息使用。\n \n2、 本平台不会向任何人出售或出借用户的个人或法人信息，除非事先得到用户得许可。\n \n3、 当本平台不允许用户通过第三方以任何手段收集、编辑、出售或者无偿传播用户的个人或法人信息。用户如从事上述活动，一经发现，本平台有权立即终止与该用户的服务协议，并根据平台相关规定处理。\n \n第四十七条   用户在平台上的个人或法人信息将在下述情况下部分或全部被披露：\n \n1、 经用户同意，向第三方披露。\n \n2、 用户在使用本平台过程中涉及到知识产权类纠纷，有第三方主张权利的，本平台在审核主张方提交的资料后认为披露用户信息有助于纠纷解决的。\n \n3、 根据法律的有关规定，或者行政、司法机关的要求，向第三方或者行政、司法机关披露。\n \n4、 若用户出现违反中国有关法律或者平台规定的情况，需要向第三方披露。\n \n5、 为提供平台用户所要求的产品和服务，而必须和第三方分享用户的个人或法人信息。\n \n6、 用户或者第三方申请本平台披露其他用户信息的，平台有权视实际情况要求申请人出具书面申请，申请书内容应包含申请披露的信息范围、用途及使用承诺等内容。\n \n7、 其它本平台根据法律或者平台规定认为合适的披露。\n \n第四十八条  信息安全：\n \n1、 在使用本平台服务进行网上交易时，请用户妥善保护自己的个人或法人信息，仅在必要的情形下向他人提供。\n \n2、 如果用户发现个人或法人信息泄密，尤其是用户账户或“支付账户管理”账户及密码发生泄露，请用户及时联系平台，沟通处理。\n \n第四十九条  本平台只是为用户提供一个服务交易的平台，对于用户所发布的需求的合法性、真实性及其品质，以及用户履行交易的能力等，本平台一律不负任何担保责任。 \n \n第十一章   交易纠纷解决方式\n \n第五十条   本协议及其规则的有效性、履行和与本协议及其规则效力有关的所有事宜，将受中华人民共和国法律管辖，任何争议仅适用中华人民共和国法律。\n \n第五十一条  凡因履行本协议及其规则发生的纠纷以及在平台上交易产生的所有纠纷，各方可协商解决，如协商不成，用户双方均同意由被告所在地法院管辖处理纠纷或争议。\n \n第十二章  协议完整\n \n第五十二条  本协议由本协议条款与本平台公示的各项《制度》组成，相关名词可互相引用参照，如有不同理解，以本协议条款为准。\n \n第五十三条  用户对本协议理解和认同，即对本协议所有组成部分的内容理解并认同，一旦用户使用本服务，用户和本平台即受本协议所有组成部分的约束。\n \n \n第十二章  费用\n \n第五十四条  本协议项下水平台为服务者提供的信息平台服务暂不收费。如后续水平台进行收费，将提前在水平台公示收费的开始时间及收费标准，如服务者不接受水平台的收费标准，应立即停止使用本服务，如继续使用本服务的，则应按照水平台公示的收费标准向水平台支付费用。 \n \n第十三章  其他\n \n第五十五条  本平台服务协议包含基于本服务协议制定的各项规则拥有最终解释权。\n \n第五十六条  本协议的规定是可分割的，如本协议任何规定被裁定为无效或不可执行，则该规定可被删除，不影响其余条款的继续执行。\n \n第五十七条  本协议的任何条款无论因何种原因无效或不具可执行性，其余条款仍有效，对双方具有约束力。\n \n第五十八条  如果您对用户协议有任何疑问，请联系service@waterforall.cn\n</string>
    <string name="about_content">公司简介\n \n北京南威水科技术有限公司（以下简称“南威水科”）专注于涉水领域软件开发，以“天下没有获取的水信息，天下没有难管理的水资源”为使命，致力打造水行业信息化业界标杆。南威水科是南威软件（国内TOP10的在上海证券交易所上市的软件企业，股票代码：603636 ）投资创立的一家专业服务于涉水领域的互联网公司\n \n平台介绍\n \n水平台是为涉水企业、社会公众、政府部门和科研教育等利益相关者打造的互联网开放服务平台，致力于实现涉水信息共享化、涉水管理规范化、涉水服务主动化、涉水控制自动化和涉水决策科学化，为构建安全、生态、美丽和高效的中国水世界做出贡献。\n平台面向政府部门提供智慧化的决策支持、业务管理、事务办理等服务；为涉水企业提供信息推送、资源整合、电子商务、人才招聘等多种技术支持；为涉水相关科研机构提供专业、灵性的数据检索、数据分析、资源下载的环境；为社会公众提供息息相关的水信息服务，打造“亲水、爱水、护水、节水”的综合平台，打通公众参与水事务的渠道。\n \n平台功能\n \n找信息：提供技术、人才、资讯、产品、项目、设备、数据、方案、工具、服务等涉水信息的检索服务。\n办业务：为政府部门、用水企业、经营企业等专业用户提供涉水业务办理。\n建联系：为涉水买卖双方提供水技术、水产品、水设备、水数据、水服务、水方案等涉水内容的发布、交易与评价功能服务。\n辅决策：通过平台积累的大数据的挖掘分析，运用模型算法，为专业用户和领导提供决策支持。\n \n平台优势\n \n水平台是专为涉水利益相关者打造的互联网专业平台，平台有以下特性：\n一是综合性，是以“水”为主题的最完整信息提供者；\n二是集成性，提供涉水功能的一站式服务，包括信息的检索、服务的买卖、相互的交流、业务的管理、决策的辅助等；\n三是开放性，目标是一个共享开放平台，可以为用户提供诸如运营、交流、宣传、交易等各种服务接口，由用户自主进行发布和运维；\n四是便捷性，围绕人人皆用、处处能用、时时可用的目标，成为口袋宝。\n\n</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>


</resources>
