<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/d_20"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/tv_weixin"
            android:text="@string/login_weixin"
            android:drawableTop="@mipmap/login_weixin"
           style="@style/OtherAccount"

            />

        <TextView
            android:id="@+id/tv_qq"
            android:text="@string/login_qq"
            android:drawableTop="@mipmap/login_qq"
            style="@style/OtherAccount"

            />

        <TextView
            android:id="@+id/tv_weibo"
            android:text="@string/login_weibo"
            android:drawableTop="@mipmap/login_weibo"
            style="@style/OtherAccount"

            />
    </LinearLayout>
</RelativeLayout>