<com.yalantis.phoenix.PullToRefreshView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pullrefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <com.youth.banner.Banner
            android:id="@+id/banner_guizhou"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            >
        </com.youth.banner.Banner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ab47bc"
            android:orientation="horizontal"
            android:paddingTop="@dimen/d_5"
            >

            <TextView
                android:id="@+id/tv_home_menu_shiwuzhaoling"
                style="@style/HomeMenu"
                android:drawableTop="@mipmap/home_menu_shiwuzhaoling"
                android:text="@string/guizhou_menu_shiwuzhapling"
                />

            <TextView
                android:id="@+id/tv_home_menu_techan"
                style="@style/HomeMenu"
                android:drawableTop="@mipmap/home_menu_techan"
                android:text="@string/guizhou_menu_speciality"
                />

            <TextView
                android:id="@+id/tv_home_menu_university"
                style="@style/HomeMenu"
                android:drawableTop="@mipmap/home_menu_university"
                android:text="@string/guizhou_menu_university"
                />

            <TextView
                android:id="@+id/tv_home_menu_scenic"
                style="@style/HomeMenu"
                android:drawableTop="@mipmap/home_menu_scenic"
                android:text="@string/guizhou_menu_scenic"
                />
        </LinearLayout>

    </LinearLayout>
</com.yalantis.phoenix.PullToRefreshView>
